[gd_scene load_steps=20 format=3 uid="uid://llm28amxf6rf"]

[ext_resource type="Script" path="res://entities/animals/animal.gd" id="1_e2vek"]
[ext_resource type="Script" path="res://entities/animals/leopard.gd" id="2_xwfpw"]
[ext_resource type="Texture2D" uid="uid://duqvi6y5wt5ml" path="res://assets/sprites/leopardtemp.png" id="3_lb63x"]
[ext_resource type="Texture2D" uid="uid://bws25pcf2c680" path="res://assets/sprites/animals/leopard_eat.png" id="3_rk01e"]
[ext_resource type="AudioStream" uid="uid://ithfhh2ycocs" path="res://assets/music/sfx/cat_1.wav" id="4_cb8ug"]
[ext_resource type="Texture2D" uid="uid://ypugi13v3y18" path="res://assets/sprites/animals/leopard_move.png" id="4_o0uny"]
[ext_resource type="AudioStream" uid="uid://cr8euweob8nw" path="res://assets/music/sfx/cat_2.wav" id="5_88mh2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gdoti"]
size = Vector2(7.555, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojux7"]
atlas = ExtResource("3_rk01e")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7mv6"]
atlas = ExtResource("3_rk01e")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_6matf"]
atlas = ExtResource("3_rk01e")
region = Rect2(0, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_uljvd"]
atlas = ExtResource("4_o0uny")
region = Rect2(0, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_ccq1h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojux7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7mv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6matf")
}],
"loop": true,
"name": &"Eat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uljvd")
}],
"loop": true,
"name": &"Move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_lb63x")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gvj48"]
size = Vector2(3, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_n0p4s"]
radius = 17.0294

[sub_resource type="Animation" id="Animation_qiltk"]
resource_name = "Eat"
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.498039)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"Eat", &"Eat"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterBody2D/AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_jdyxj"]
resource_name = "Move"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Move"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p6bom"]
_data = {
"Eat": SubResource("Animation_qiltk"),
"Move": SubResource("Animation_jdyxj")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_gkfiu"]
streams_count = 2
stream_0/stream = ExtResource("4_cb8ug")
stream_0/weight = 1.0
stream_1/stream = ExtResource("5_88mh2")
stream_1/weight = 1.0

[node name="Leopard" type="Node2D" groups=["Animal"]]
script = ExtResource("1_e2vek")
favorite_plant_id = 4
eating_range = 0.1
health = 1
attack_speed = 1.0

[node name="CharacterBody2D" type="CharacterBody2D" parent="." groups=["Animal"]]
script = ExtResource("2_xwfpw")
speed = 20.0
attack_speed = 30.0
screen_exit_speed = 15.0
max_distance_from_plant = 35.0
knockback = 4.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_gdoti")
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
modulate = Color(1, 1, 1, 0.498039)
z_index = 1
sprite_frames = SubResource("SpriteFrames_ccq1h")
animation = &"Eat"
frame = 2

[node name="DealDamage" type="Area2D" parent="CharacterBody2D/AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/AnimatedSprite2D/DealDamage"]
position = Vector2(-2.5, 0.5)
shape = SubResource("RectangleShape2D_gvj48")

[node name="AttackRange" type="Area2D" parent="CharacterBody2D/AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/AnimatedSprite2D/AttackRange"]
shape = SubResource("CircleShape2D_n0p4s")

[node name="AttackSpeed" type="Timer" parent="CharacterBody2D"]
wait_time = 0.2
one_shot = true

[node name="RunAway" type="Timer" parent="CharacterBody2D"]
wait_time = 0.2
one_shot = true

[node name="FailedAttackReturnToPlant" type="Timer" parent="CharacterBody2D"]
wait_time = 1.3
one_shot = true

[node name="SelfDestructSequence" type="Timer" parent="CharacterBody2D"]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_p6bom")
}

[node name="PostStealthFrenzy" type="Timer" parent="CharacterBody2D"]
wait_time = 4.0
one_shot = true

[node name="RecalculateMoveDir" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="EnterScreen" type="Timer" parent="."]
one_shot = true

[node name="ChooseRandomFavoritePlant" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="DropSeedTimer" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="EatPlant" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Noise" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_gkfiu")

[node name="SFX_Randomizer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="CharacterBody2D/AnimatedSprite2D/DealDamage" to="CharacterBody2D" method="_on_deal_damage_body_entered"]
[connection signal="body_entered" from="CharacterBody2D/AnimatedSprite2D/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="CharacterBody2D/AnimatedSprite2D/AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="timeout" from="CharacterBody2D/AttackSpeed" to="CharacterBody2D" method="_on_attack_speed_timeout"]
[connection signal="timeout" from="CharacterBody2D/RunAway" to="CharacterBody2D" method="_on_run_away_timeout"]
[connection signal="timeout" from="CharacterBody2D/FailedAttackReturnToPlant" to="CharacterBody2D" method="_on_failed_attack_return_to_plant_timeout"]
[connection signal="timeout" from="CharacterBody2D/SelfDestructSequence" to="CharacterBody2D" method="_on_self_destruct_sequence_timeout"]
[connection signal="animation_finished" from="CharacterBody2D/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="CharacterBody2D/AnimationPlayer" to="CharacterBody2D" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="CharacterBody2D/PostStealthFrenzy" to="CharacterBody2D" method="_on_post_stealth_frenzy_timeout"]
[connection signal="timeout" from="RecalculateMoveDir" to="CharacterBody2D" method="_on_recalculate_move_dir_timeout"]
[connection signal="timeout" from="ChooseRandomFavoritePlant" to="." method="_on_choose_random_favorite_plant_timeout"]
[connection signal="timeout" from="DropSeedTimer" to="." method="_on_drop_seed_timer_timeout"]
[connection signal="timeout" from="EatPlant" to="." method="_on_eat_plant_timeout"]
[connection signal="timeout" from="SFX_Randomizer" to="." method="_on_sfx_randomizer_timeout"]
